# marl

marl-backend/: pyproject.toml
marl-backend/marl_backend/: app.py  schemas.py
marl-front/: package.json
marl-front/src/: App.tsx  PolicyIterationComponent.tsx  police.tsx
marl-front/src/api/: api.ts
marl-front/src/hooks/: usePolicyIteration.ts
marl-front/src/types/: types.ts
